GPC/tests/examples/fail/errArith2.gpc

int GPRM::Test::errArith2() {
    return 3 / 3.0;
}

